--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   },
   "homepage": "https://github.com/rodson/create-demo-app#readme",
   "dependencies": {
+    "chalk": "^5.3.0",
     "commander": "^12.0.0",
+    "download-git-repo": "^3.0.2",
     "fs-extra": "^11.2.0",
     "globby": "^14.0.1",
-    "inquirer": "^9.2.15"
+    "inquirer": "^9.2.15",
+    "ora": "^8.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.25"
